# homework_Django

./: .env.sample  README.md  catalogs.json  groups.json  pyproject.toml  requirements.txt
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_post_content_alter_post_is_published.py
blogs/templates/: post_list.html
blogs/templates/blogs/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_product_owner.py  0004_alter_product_options_product_publication_status.py  0004_alter_product_options_product_unpublish.py  0005_alter_product_options_and_more.py  0006_alter_product_options_remove_category_group_and_more.py
catalog/templates/: contacts.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  category.html  contacts.html  home.html  message.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html  products_detail.html
catalog/templates/catalog/includes/: inc_header.html  inc_info.html  inc_menu.html
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_tg_name.py
users/templates/: login.html
users/templates/users/: user_form.html
