[tool.poetry]
name = "homework-django"
version = "0.1.0"
description = ""
authors = ["ludmila davletshina <ludaplv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
ipython = "^8.27.0"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
