[tool.poetry]
name = "homework-django"
version = "0.1.0"
description = ""
authors = ["ludmila davletshina <ludaplv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
ipython = "^8.27.0"
django-phonenumber-field = "^8.0.0"
django = "4.2.2"
redis = "^5.2.0"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
